# GitAgent_Z

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: build.sh
src/: main.py  styles.tcss
src/config/: settings.py
src/core/: llm.py
src/tools/: git.py
src/utils/: exceptions.py  logging.py
