[project]
name = "agent"
version = "0.0.1"
description = "GitAgent_Z: A LangGraph agent."
authors = [
    { name = "Zedro", email = "45104292+PedroZappa@users.noreply.github.com " },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.1",
    "pydantic",
    "pydantic-settings",
    "rich",
    "textual",
    "textual-dev",
    "textual[syntax]",
    "langchain",
    "langchain[ollama]",
    "langchain-tavily",
    "langgraph>=0.2.6",
    "langsmith",
]


[project.optional-dependencies]
dev = [
    "black>=23.9.1",
]

[build-system]
requires = [
  "setuptools>=73.0.0", 
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.2.8",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
]
